fix main page on tablets

--- a/src/base/photos/styles/photo-item.pcss
+++ b/src/base/photos/styles/photo-item.pcss
@@ -69,6 +69,9 @@
       padding: 15px 10px 20px;
       text-align: left;
       font-size: 28px;
+      @media(--tablet) {
+        font-size: 20px;
+      }
     }
     &summ {
       width: 30%;
@@ -77,6 +80,9 @@
       float: right;
       color: #31bebc;
       margin-top: 25px;
+      @media(--tablet) {
+        margin-top: 30px;
+      }
       i{
         margin-left: 5px;
       }
